--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "AoCbot"
-version = "2019.2"
+version = "2019.11"
 description = "A d.py Cog for Advent of Code!"
 license="MIT"
 authors = ["sco1 <sco1.git@gmail.com>"]
@@ -14,6 +14,7 @@ classifiers = [
     'Operating System :: OS Independent',
     'Programming Language :: Python :: 3 :: Only',
     'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
     'Topic :: Communications :: Chat',
     'Topic :: Internet'
 ]
@@ -21,12 +22,12 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 beautifulsoup4 = "^4.7"
-"discord.py" = "^1.0"
+"discord.py" = "^1.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7"
-black = {version = "*", allows-prereleases=true}
-pre-commit = { git = "https://github.com/pre-commit/pre-commit.git" }
+flake8-annotations = "^1.1"
+black = {version = "^18.3-alpha.0", allows-prereleases = true}
 
 [build-system]
 requires = ["poetry>=0.12"]
